--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="only screen and (max-width:1200px)" href="css/smalldesktop.css">
     <link rel="stylesheet" type="text/css" media="screen and (max-width:992px)" href="css/tablet.css">
     <link rel="stylesheet" type="text/css" media="screen and (max-width:768px)" href="css/landscape.css">
-    <link rel="stylesheet" type="text/css" media="screen and (max-width:589px)" href="css/mobile.css">
+    <link rel="stylesheet" type="text/css" media="screen and (max-width:586px)" href="css/mobile.css">
     <!-- bootstrap css cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- icon -->
@@ -87,37 +87,37 @@
             <h1>Experience Once In Your Life Time</h1>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
         </div>
-        <div class="plan-and-descriptions">
-            <div class="icons">
+        <div class="plans-and-decription">
+            <div class="block-1">
                 <img src="https://preview.colorlib.com/theme/hepta/fonts/flaticon/svg/001-breakfast.svg" alt="">
-                <img src="https://preview.colorlib.com/theme/hepta/fonts/flaticon/svg/002-planet-earth.svg" alt="">
-                <img src="https://preview.colorlib.com/theme/hepta/fonts/flaticon/svg/003-airplane.svg" alt="">
-            </div>
-            <div class="h2-s">
                 <h2>Good Foods</h2>
-                <h2>Travel Anywhere</h2>
-                <h2>Air plane</h2>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             </div>
-            <div class="p-s">
+            <div class="block-2">
+                <img src="https://preview.colorlib.com/theme/hepta/fonts/flaticon/svg/002-planet-earth.svg" alt="">
+                <h2>Good Foods</h2>
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            </div>
+            <div class="block-3">
+                <img src="https://preview.colorlib.com/theme/hepta/fonts/flaticon/svg/006-hot-air-balloon.svg" alt="">
+                <h2>Good Foods</h2>
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             </div>
         </div>
-        <div class="plan-and-descriptions-2">
-            <div class="icons">
+        <div class="plans-and-decription-2">
+            <div class="block-1">
                 <img src="https://preview.colorlib.com/theme/hepta/fonts/flaticon/svg/004-beach.svg" alt="">
+                <h2>Good Foods</h2>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            </div>
+            <div class="block-2">
                 <img src="https://preview.colorlib.com/theme/hepta/fonts/flaticon/svg/005-mountains.svg" alt="">
+                <h2>Good Foods</h2>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            </div>
+            <div class="block-3">
                 <img src="https://preview.colorlib.com/theme/hepta/fonts/flaticon/svg/006-hot-air-balloon.svg" alt="">
-            </div>
-            <div class="h2-s">
-                <h2>Beach Resort</h2>
-                <h2>Mountain Climbing</h2>
-                <h2>Hot Air Balloon</h2>
-            </div>
-            <div class="p-s">
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <h2>Good Foods</h2>
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             </div>
         </div>
